--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <body>
     <header id="masthead">
         <div class="container">
-            <a href="index.html" id="Logo">Jeff Greco</a>
+            <a href="index.html" id="logo">Jeff Greco</a>
             <nav>
                 <a href="index.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
