fixed header in smallest query

--- a/index.html
+++ b/index.html
@@ -28,20 +28,13 @@
 
             <img src="assets/images/pic.png" height="20%" width="20%" class="auth-image" alt="Jeff Greco">
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi facilis unde eligendi! Distinctio itaque
-                rerum ipsam consectetur ipsum, adipisci iusto quidem, eveniet perspiciatis praesentium expedita veniam
-                unde,
-                qui id officia!</p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, exercitationem quidem fuga,
-                consequuntur
-                totam deleniti quaerat autem culpa modi reiciendis dolorem accusantium iste sunt aperiam nulla eum vel
-                voluptatum. Incidunt.</p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, exercitationem quidem fuga,
-                consequuntur
-                totam deleniti quaerat autem culpa modi reiciendis dolorem accusantium iste sunt aperiam nulla eum vel
-                voluptatum. Incidunt.</p>
+            <p>Hello, I am a student at The Coding Bootcamp at The University of North Carolina Charlotte studying full
+                stack web development. I have a Bachelor of the Arts degree in Philosophy that I received from
+                Appalachian State University, though I have always had an interest in coding and have decided to focus
+                my career trajectory thusly. I have been married to my wife, Madalyn, for three years - though we have
+                been together for nearly 17! I am the proud father of three kitty children - 12, 11 and 10 years old -
+                and we hope to someday add a dog to our family when space permits it. I am looking forward to the rest
+                of my coding journey.</p>
 
         </section>
     </div>
