--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,12 @@
         </div>
 
         <div class="work">
-            <img src="assets/images/ph2.jpg" class="auth-image" alt="RPG Game">
+            <img src="assets/images/ph2.png" class="auth-image" alt="RPG Game">
             <h3>RPG Game</h3>
         </div>
 
         <div class="work">
-            <img src="assets/images/ph3.jpg" class="auth-image" alt="Trivia Game">
+            <img src="assets/images/ph3.png" class="auth-image" alt="Trivia Game">
             <h3>Trivia Game</h3>
         </div>
         
@@ -47,7 +47,7 @@
         </div>
 
         <div class="work">
-            <img src="assets/images/ph5.jpg" class="auth-image" alt="Rock Paper Scissors">
+            <img src="assets/images/ph5.png" class="auth-image" alt="Rock Paper Scissors">
             <h3>Rock Paper Scissors</h3>
         </div>
 
