--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
         <h1>Portfolio</h1>
 
         <div class="work">
-            <img src="assets/images/ph1.jpg" class="auth-image" alt="Hangman">
-            <h3>Hangman</h3>
+            <img src="assets/images/ph1.jpg" class="auth-image" alt="Psychic Game">
+            <h3><a href="https://jeff-paul-greco.github.io/psychic-game/">Psychic Game</a></h3>
         </div>
 
         <div class="work">
