added link to Crystals Collector in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,8 @@
         </div>
 
         <div class="work">
-            <img src="assets/images/ph2.png" class="auth-image" alt="RPG Game">
-            <h3>RPG Game</h3>
+            <img src="assets/images/ph2.png" class="auth-image" alt="Crystals Collector">
+            <h3><a href="https://jeff-paul-greco.github.io/unit-4-game/">Crystals Collector</a></h3>
         </div>
 
         <div class="work">
