--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <section class="main-section">
             <h1>Contact</h1>
 
-            <form id="contact-form">
+            <form id="contact-form" action = "mailto:jeffpgreco@gmail.com" method="post" enctype="text/plain">
                 <ul>
                     <li>
                         <label form="name">Name</label>
