added Trivia Game link

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 
         <div class="work">
             <img src="assets/images/ph3.png" class="auth-image" alt="Trivia Game">
-            <h3>Trivia Game</h3>
+            <h3><a href="https://jeff-paul-greco.github.io/TriviaGame/">Trivia Game</a></h3>
         </div>
         
         <div class="work">
