--- a/portfolio.html
+++ b/portfolio.html
@@ -42,8 +42,8 @@
         </div>
         
         <div class="work">
-            <img src="assets/images/ph4.jpg" class="auth-image" alt="Rutgers Info Widget">
-            <h3>Rutgers Info Widget</h3>
+            <img src="assets/images/ph4.jpg" class="auth-image" alt="Gif Generator">
+            <h3><a href="https://jeff-paul-greco.github.io/GifTastic/">Gif Generator</a></h3>
         </div>
 
         <div class="work">
