made links open in new tabs

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Me</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -28,22 +28,22 @@
 
         <div class="work">
             <img src="assets/images/ph1.jpg" class="auth-image" alt="Psychic Game">
-            <h3><a href="https://jeff-paul-greco.github.io/psychic-game/">Psychic Game</a></h3>
+            <h3><a href="https://jeff-paul-greco.github.io/psychic-game/" target="_blank">Psychic Game</a></h3>
         </div>
 
         <div class="work">
             <img src="assets/images/ph2.png" class="auth-image" alt="Crystals Collector">
-            <h3><a href="https://jeff-paul-greco.github.io/unit-4-game/">Crystals Collector</a></h3>
+            <h3><a href="https://jeff-paul-greco.github.io/unit-4-game/" target="_blank">Crystals Collector</a></h3>
         </div>
 
         <div class="work">
             <img src="assets/images/ph3.png" class="auth-image" alt="Trivia Game">
-            <h3><a href="https://jeff-paul-greco.github.io/TriviaGame/">Trivia Game</a></h3>
+            <h3><a href="https://jeff-paul-greco.github.io/TriviaGame/" target="_blank">Trivia Game</a></h3>
         </div>
         
         <div class="work">
             <img src="assets/images/ph4.jpg" class="auth-image" alt="Gif Generator">
-            <h3><a href="https://jeff-paul-greco.github.io/GifTastic/">Gif Generator</a></h3>
+            <h3><a href="https://jeff-paul-greco.github.io/GifTastic/" target="_blank">Gif Generator</a></h3>
         </div>
 
         <div class="work">
