added link to train scheduler

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,8 @@
         </div>
 
         <div class="work">
-            <img src="assets/images/ph5.png" class="auth-image" alt="Rock Paper Scissors">
-            <h3>Rock Paper Scissors</h3>
+            <img src="assets/images/ph5.png" class="auth-image" alt="Train Scheduler">
+            <h3><a href="https://jeff-paul-greco.github.io/train-scheduler/" target="_blank">Train Scheduler</a></h3>
         </div>
 
     </section>
