--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="main-container" class="container">
         <section class="main-section">
-            <h1>Contact</h1>
+            <h1>About</h1>
 
             <img src="assets/images/pic.png" height="20%" width="20%" class="auth-image" alt="Jeff Greco">
 
